Moved html to main app render in order to access the left half of the site

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -57,22 +57,8 @@
   </head>
     <body class="h-100">
         <div class="container-fluid h-100">
-            <div class="row h-100">
-                    <div class="col-sm h-50" id="site">col-sm</div>
-                    <div class="col-sm h-50" id="code">
-                        <div class="row" id="tab_bar">
-                            <div id="tab"><span class="tuscany"><></span> <strong>index.php</strong> &nbsp;<a href data-toggle="tooltip" title="Skip animation">x</a></div>
-                        </div>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">public_html</a></li>
-                                <li class="breadcrumb-item"><a href="#"><span class="tuscany"><></span> index.html</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Library</li>
-                            </ol>
-                        </nav>
-                        <div id="typing">
-                        </div>
-                    </div>
+            <div id="app" class="h-100">
+                    
             </div>
         </div>
 
